<androidx.constraintlayout.widget.ConstraintLayout
    android:paddingTop="20dp"
    android:paddingHorizontal="20sp"
    android:paddingBottom="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/splash_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"/>


    <TextView
        android:text="@string/app_fullname"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintStart_toEndOf="@+id/logo"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvd"
        android:text="@string/msg"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/clicktv"
        android:layout_marginTop="10dp"
        android:text="@string/devlink"
        android:textSize="16sp"
        android:textColor="@color/green"
        android:gravity="center"
        android:clickable="true"
        android:lineHeight="25sp"
        android:focusable="true"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>